--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-    <div>Lorem, ipsum.</div>
+    <div id="elem1">Lorem, ipsum.</div>
     <div>Asperiores, veniam.</div>
     <div>Aperiam, incidunt.</div>
+    <script src="script.js"></script>
 </body>
 
 </html>
